# materialize-example

./: .gitignore  .user.yml  README.md  load_data.py  pyproject.toml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: account_balances.sql  properties.yml
migrations/: 20250213105620_create_tables.down.sql  20250213105620_create_tables.up.sql  20250214110328_add_data.down.sql  20250214110328_add_data.up.sql
pulumi/: Pulumi.prod.yaml  Pulumi.yaml  main.py
